dark mode white mode issue and responsiveness.

--- a/client/src/assets/sass/main.css
+++ b/client/src/assets/sass/main.css
@@ -62,6 +62,7 @@
   display: flex;
   flex-direction: row;
   gap: 3rem;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: 500px) {
   .form .input-row {
@@ -84,7 +85,7 @@
   flex-direction: column;
   flex-direction: column-reverse;
   gap: 1rem;
-  flex: 1;
+  flex: auto;
 }
 .form .input-row .input__group textarea {
   resize: none;
@@ -108,6 +109,7 @@
 }
 .form .input-row .form__input {
   font-weight: 400;
+  flex: 1;
   background-color: var(--light-section);
   border: none;
   font-family: inherit;
